--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer Zone</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <!-- header section -->
+
+    <header>
+        <nav class="nav-ber">
+            <div class="logo">
+                <img src="images/Frame.png" alt="" class="logo-icon">
+                <h3 class="logo-name"><span class="g">G</span>amer</h3>
+            </div>
+            <div class="nav-menu">
+                <div class="menu-container">
+                    <li><a href="" class="menu-item">About Us</a></li>
+                    <li><a href="" class="menu-item">Developer</a></li>
+                </div>
+                <div class="follow-btn">
+                    <p class="follow-item">Follow Us On</p>
+                    <a href=""><img class="follow-icon" src="images/youtube.png" alt=""></a>
+                    <a href=""><img class="follow-icon" src="images/tik-tok 1.png" alt=""></a>
+                </div>
+            </div>
+        </nav>
+    </header>
 </body>
+
 </html>
