add banner section

--- a/index.html
+++ b/index.html
@@ -33,6 +33,33 @@
                 </div>
             </div>
         </nav>
+
+        <!-- banner section -->
+
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-title">PLAY LIKE THE<br><span class="goat">G.O.A.T.</span></h3>
+                <div class="banner-info">
+                    <img src="images/Frame-3.png" alt="" class="banner-icon">
+                    <p>1-Click instant play</p>
+                </div>
+                <div class="banner-info">
+                    <img src="images/Frame (1).png" alt="" class="banner-icon">
+                    <p>No Download</p>
+                </div>
+                <div class="banner-info">
+                    <img src="images/Frame (2).png" alt="" class="banner-icon">
+                    <p>1000s of supported online games</p>
+                </div>
+                <div class="banner-btn">
+                    <button class="btn-1">SIGN IN</button>
+                    <button class="btn-2">GO ROGUE</button>
+                </div>
+            </div>
+            <div>
+                <img class="banner-img" src="images/Group 18.png" alt="">
+            </div>
+        </div>
     </header>
 </body>
 
