add gamer section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <div class="banner">
             <div class="banner-content">
-                <h3 class="banner-title">PLAY LIKE THE<br><span class="goat">G.O.A.T.</span></h3>
+                <h3 class="banner-title">PLAY LIKE THE<br><span class="goat purple-title">G.O.A.T.</span></h3>
                 <div class="banner-info">
                     <img src="images/Frame-3.png" alt="" class="banner-icon">
                     <p>1-Click instant play</p>
@@ -62,6 +62,26 @@
             </div>
         </div>
     </header>
+
+    <!-- main section -->
+
+    <main>
+
+        <!-- gamer section -->
+
+        <div class="gamer">
+            <div>
+                <img src="images/pngwing 4.png" alt="" class="gamer-img">
+            </div>
+            <div class="gamer-content">
+                <h3 class="gamer-title purple-title">We are gamer</h3>
+                <p class="gamer-info">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+                <button class="btn-1 gamer-btn">KNOW MORE</button>
+                <p class="gamer-purpose">Our purpose...</p>
+                <h4 class="gamer-slogan">“unleash the gamer in everyone”</h4>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
