add play section

--- a/index.html
+++ b/index.html
@@ -75,10 +75,58 @@
             </div>
             <div class="gamer-content">
                 <h3 class="gamer-title purple-title">We are gamer</h3>
-                <p class="gamer-info">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+                <p class="gamer-info section-info">An international digital games and entertainment company. We develop,
+                    publish and distribute multiplayer mobile games. We reach over 400 million players each month and
+                    our audience keeps growing.</p>
                 <button class="btn-1 gamer-btn">KNOW MORE</button>
                 <p class="gamer-purpose">Our purpose...</p>
                 <h4 class="gamer-slogan">“unleash the gamer in everyone”</h4>
+            </div>
+        </div>
+
+        <!-- video section -->
+
+        <div class="video">
+            <h3 class="video-title">Online Games <span class="purple-title">Funny Videos</span></h3>
+            <p class="video-info section-info">A Collection of Hilarious Videos to Brighten Your Day</p>
+            <div class="video-card">
+                <div>
+                    <div class="card">
+                        <img src="images/Rectangle 4.png" alt="" class="card-icon">
+                        <a href=""><img src="images/play-button 1.png" alt="" class="play-icon"></a>
+                        <p class="watch">Watch Now</p>
+                    </div>
+                    <p class="card-info section-info">No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div>
+                    <img src="images/Rectangle 5.png" alt="" class="card-icon">
+                    <p class="card-info section-info">Did you score? #unblockedgames #school</p>
+                </div>
+                <div>
+                    <img src="images/Rectangle 7.png" alt="" class="card-icon">
+                    <p class="card-info section-info">Breaking game records like OG</p>
+                </div>
+                <div>
+                    <img src="images/Rectangle 6.png" alt="" class="card-icon">
+                    <p class="card-info section-info">Busted gaming on school laptop, but you are still lit.</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- play section -->
+
+        <div class="play">
+            <div class="play-content">
+                <h3 class="play-title"><span class="purple-title">Play Instantly,</span><br>No Downloads<br>No Installs.</h3>
+                <p class="play-info section-info">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+            </div>
+            <div class="play-icon">
+                <div>
+                    <img src="images/Rectangle 55.png" alt="" class="icon-1">
+                </div>
+                <div>
+                    <img src="images/Rectangle 66.png" alt="" class="icon-2">
+                </div>
             </div>
         </div>
     </main>
