add gamer section

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div>
                     <div class="card">
                         <img src="images/Rectangle 4.png" alt="" class="card-icon">
-                        <a href=""><img src="images/play-button 1.png" alt="" class="play-icon"></a>
+                        <a href=""><img src="images/play-button 1.png" alt="" class="play-btn"></a>
                         <p class="watch">Watch Now</p>
                     </div>
                     <p class="card-info section-info">No Download. No Installs. Play games Instantly on Gamer.</p>
