--- a/index.html
+++ b/index.html
@@ -129,6 +129,48 @@
                 </div>
             </div>
         </div>
+
+        <!-- game section -->
+
+        <div class="game">
+            <div class="game-content action">
+                <img src="images/Rectangle 11.png" alt="" class="game-icon">
+                <p class="game-name">Action Games</p>
+            </div>
+            <div class="game-content adventure">
+                <img src="images/Rectangle 12.png" alt="" class="game-icon">
+                <p class="game-name">Adventure Games</p>
+            </div>
+            <div class="game-content arcade">
+                <img src="images/Rectangle 13.png" alt="" class="game-icon">
+                <p class="game-name">Arcade Games</p>
+            </div>
+            <div class="game-content educational">
+                <img src="images/Rectangle 14.png
+                " alt="" class="game-icon">
+                <p class="game-name">Educational Games</p>
+            </div>
+            <div class="game-content word">
+                <img src="images/Rectangle 15.png" alt="" class="game-icon">
+                <p class="game-name">Word Games</p>
+            </div>
+            <div class="game-content role">
+                <img src="images/Rectangle 16.png" alt="" class="game-icon">
+                <p class="game-name">Role Palying Games</p>
+            </div>
+            <div class="game-content music">
+                <img src="images/Rectangle 17.png" alt="" class="game-icon">
+                <p class="game-name">Music Games</p>
+            </div>
+            <div class="game-content puzzle">
+                <img src="images/Rectangle 18.png" alt="" class="game-icon">
+                <p class="game-name">Puzzle Games</p>
+            </div>
+            <div class="game-content strategy">
+                <img src="images/Rectangle 19.png" alt="" class="game-icon">
+                <p class="game-name">Strategy Games</p>
+            </div>
+        </div>
     </main>
 </body>
 
