add footer section

--- a/index.html
+++ b/index.html
@@ -117,8 +117,10 @@
 
         <div class="play">
             <div class="play-content">
-                <h3 class="play-title"><span class="purple-title">Play Instantly,</span><br>No Downloads<br>No Installs.</h3>
-                <p class="play-info section-info">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+                <h3 class="play-title"><span class="purple-title">Play Instantly,</span><br>No Downloads<br>No Installs.
+                </h3>
+                <p class="play-info section-info">Play games online for free without downloading. Just click the Play
+                    button and play instantly in your browser.</p>
             </div>
             <div class="play-icon">
                 <div>
@@ -133,45 +135,83 @@
         <!-- game section -->
 
         <div class="game">
-            <div class="game-content action">
-                <img src="images/Rectangle 11.png" alt="" class="game-icon">
-                <p class="game-name">Action Games</p>
-            </div>
-            <div class="game-content adventure">
-                <img src="images/Rectangle 12.png" alt="" class="game-icon">
-                <p class="game-name">Adventure Games</p>
-            </div>
-            <div class="game-content arcade">
-                <img src="images/Rectangle 13.png" alt="" class="game-icon">
-                <p class="game-name">Arcade Games</p>
-            </div>
-            <div class="game-content educational">
-                <img src="images/Rectangle 14.png
-                " alt="" class="game-icon">
-                <p class="game-name">Educational Games</p>
-            </div>
-            <div class="game-content word">
-                <img src="images/Rectangle 15.png" alt="" class="game-icon">
-                <p class="game-name">Word Games</p>
-            </div>
-            <div class="game-content role">
-                <img src="images/Rectangle 16.png" alt="" class="game-icon">
-                <p class="game-name">Role Palying Games</p>
-            </div>
-            <div class="game-content music">
-                <img src="images/Rectangle 17.png" alt="" class="game-icon">
-                <p class="game-name">Music Games</p>
-            </div>
-            <div class="game-content puzzle">
-                <img src="images/Rectangle 18.png" alt="" class="game-icon">
-                <p class="game-name">Puzzle Games</p>
-            </div>
-            <div class="game-content strategy">
-                <img src="images/Rectangle 19.png" alt="" class="game-icon">
-                <p class="game-name">Strategy Games</p>
+            <div class="game-section">
+                <div class="game-content action">
+                    <img src="images/Rectangle 11.png" alt="" class="game-icon">
+                    <p class="game-name">Action Games</p>
+                </div>
+                <div class="game-content adventure">
+                    <img src="images/Rectangle 12.png" alt="" class="game-icon">
+                    <p class="game-name">Adventure Games</p>
+                </div>
+                <div class="game-content arcade">
+                    <img src="images/Rectangle 13.png" alt="" class="game-icon">
+                    <p class="game-name">Arcade Games</p>
+                </div>
+                <div class="game-content educational">
+                    <img src="images/Rectangle 14.png
+                    " alt="" class="game-icon">
+                    <p class="game-name">Educational Games</p>
+                </div>
+                <div class="game-content word">
+                    <img src="images/Rectangle 15.png" alt="" class="game-icon">
+                    <p class="game-name">Word Games</p>
+                </div>
+                <div class="game-content role">
+                    <img src="images/Rectangle 16.png" alt="" class="game-icon">
+                    <p class="game-name">Role Palying Games</p>
+                </div>
+                <div class="game-content music">
+                    <img src="images/Rectangle 17.png" alt="" class="game-icon">
+                    <p class="game-name">Music Games</p>
+                </div>
+                <div class="game-content puzzle">
+                    <img src="images/Rectangle 18.png" alt="" class="game-icon">
+                    <p class="game-name">Puzzle Games</p>
+                </div>
+                <div class="game-content strategy">
+                    <img src="images/Rectangle 19.png" alt="" class="game-icon">
+                    <p class="game-name">Strategy Games</p>
+                </div>
             </div>
         </div>
     </main>
+
+    <!-- footer section -->
+
+    <footer class="footer">
+        <div class="footer-section">
+            <div class="logo footer-logo-section">
+                <img src="images/Frame.png" alt="" class="logo-icon">
+                <h3 class="logo-name footer-logo-name"><span class="g">G</span>amer</h3>
+            </div>
+            <div class="footer-titles">
+                <h3><a href="" class="footer-title">Our Story</a></h3>
+                <h3><a href="" class="footer-title">Games</a></h3>
+                <h3><a href="" class="footer-title">Web Games</a></h3>
+                <h3><a href="" class="footer-title">Careers</a></h3>
+                <h3><a href="" class="footer-title">Support</a></h3>
+                <h3><a href="" class="footer-title">My Account</a></h3>
+            </div>
+            <div class="footer-logo">
+                <a href=""><img src="images/twitter 1.png" alt="" class="logo-link"></a>
+                <a href=""><img src="images/facebook 1.png" alt="" class="logo-link"></a>
+                <a href=""><img src="images/Group 49.png" alt="" class="logo-link"></a>
+                <a href=""><img src="images/linkedin 1.png" alt="" class="logo-link"></a>
+                <a href=""><img src="images/instagram 1.png" alt="" class="logo-link"></a>
+                <a href=""><img src="images/apple 1.png" alt="" class="logo-link"></a>
+            </div>
+            <div class="footer-condition">
+                <p><a href="" class="condition-name">Terms & Conditions</a></p>
+                <p><a href="" class="condition-name">Privacy Policy</a></p>
+                <p><a href="" class="condition-name">Cookie Policy</a></p>
+                <p><a href="" class="condition-name">Privacy Settings</a></p>
+            </div>
+            <div class="copy-right">
+                <p class="copy-right-info">Play Games &copy; Gamer &copy; 2000-2023 Gamer Bangladesh</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
