add overlay on gamers section

--- a/index.html
+++ b/index.html
@@ -93,21 +93,41 @@
                 <div>
                     <div class="card">
                         <img src="images/Rectangle 4.png" alt="" class="card-icon">
-                        <a href=""><img src="images/play-button 1.png" alt="" class="play-btn"></a>
-                        <p class="watch">Watch Now</p>
+                        <div class="middle">
+                            <img src="images/play-button 1.png" alt="" class="play-btn">
+                            <span class="middle-text">Watch Now</span>
+                        </div>
                     </div>
                     <p class="card-info section-info">No Download. No Installs. Play games Instantly on Gamer.</p>
                 </div>
                 <div>
-                    <img src="images/Rectangle 5.png" alt="" class="card-icon">
+                    <div class="card">
+                        <img src="images/Rectangle 5.png" alt="" class="card-icon">
+                        <div class="middle">
+                            <img src="images/play-button 1.png" alt="" class="play-btn">
+                            <span class="middle-text">Watch Now</span>
+                        </div>
+                    </div>
                     <p class="card-info section-info">Did you score? #unblockedgames #school</p>
                 </div>
                 <div>
-                    <img src="images/Rectangle 7.png" alt="" class="card-icon">
+                    <div class="card">
+                        <img src="images/Rectangle 7.png" alt="" class="card-icon">
+                        <div class="middle">
+                            <img src="images/play-button 1.png" alt="" class="play-btn">
+                            <span class="middle-text">Watch Now</span>
+                        </div>
+                    </div>
                     <p class="card-info section-info">Breaking game records like OG</p>
                 </div>
                 <div>
-                    <img src="images/Rectangle 6.png" alt="" class="card-icon">
+                    <div class="card">
+                        <img src="images/Rectangle 6.png" alt="" class="card-icon">
+                        <div class="middle">
+                            <img src="images/play-button 1.png" alt="" class="play-btn">
+                            <span class="middle-text">Watch Now</span>
+                        </div>
+                    </div>
                     <p class="card-info section-info">Busted gaming on school laptop, but you are still lit.</p>
                 </div>
             </div>
