--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
 </head>
 
 <body>
+
     <!-- header section -->
 
     <header>
+
+        <!-- nav section -->
+        
         <nav class="nav-ber">
             <div class="logo">
                 <img src="images/Frame.png" alt="" class="logo-icon">
